[package]
name = "BevyGame"
version = "0.1.0"
authors = ["ExMatics HydrogenC <x13989@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["render"] }
bevy_rapier3d = { version = "0.9", features = ["simd-stable", "parallel"] }
bevy_skybox = "0.3"